# envisage

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  .travis_before_install  AGENTS.md  CHANGELOG.txt  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  api.html  appveyor-clean-cache.txt  appveyor.yml  changelog.html  ci-src-requirements.txt  debug-notes.txt  edm.yaml  etstool.py  extras.map  genindex.html  graft_docs.py  hanger.py  icon_LICENSE.txt  image_LICENSE.txt  index.html  install-edm-windows.cmd  make_doc.bat  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  setup_data.py  (+2 more)
.doctrees/: environment.pickle  index.doctree
.doctrees/envisage_core_documentation/: core.doctree  extension_points.doctree  front.doctree  glossary.doctree  howto_create_a_plugin.doctree  index.doctree  introduction.doctree  message_of_the_day.doctree  message_of_the_day_(using_eggs).doctree  plugins.doctree  preferences.doctree  services.doctree  workbench.doctree
.doctrees/tasks_user_manual/: extensibility.doctree  front.doctree  index.doctree  intro.doctree  layout.doctree  menus.doctree
.github/ISSUE_TEMPLATE/: release_template.md
.github/workflows/: check-style-strict.yml  check-style.yml  ets-from-source.yml  publish-on-pypi.yml  style-requirements.txt  test-doc-build.yml  test-with-edm.yml  test-with-pypi.yml  test-wx.yml  update-gh-pages-on-release.yml  update-gh-pages.yml
4.5/: objects.inv
4.5.1/: search.html
4.5.1/envisage_core_documentation/: howto_create_a_plugin.html  message_of_the_day.html  message_of_the_day_(using_eggs).html  plugins.html  workbench.html
4.5.1/tasks_user_manual/: extensibility.html  front.html  index.html  menus.html
4.5/envisage_core_documentation/: glossary.html  introduction.html
4.7/: api.html  objects.inv  py-modindex.html  search.html  searchindex.js
4.7.2/: genindex.html
4.7.2/_modules/: _weakrefset.html  weakref.html
4.7.2/api/: envisage.plugins.event_manager.html  envisage.plugins.html  envisage.plugins.refresh_code.html  envisage.plugins.text_editor.html  envisage.resource.html  envisage.ui.single_project.editor.html  envisage.ui.tasks.html
4.7.2/envisage_core_documentation/: core.html  glossary.html  gui_application.html  services.html
4.7/api/: envisage.html  (+5 more)
4.8.0/: api.html  py-modindex.html
4.9/: api.html  genindex.html  index.html  search.html
5.0/: api.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
6.1/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
7.0/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
_modules/: _weakrefset.html  index.html  weakref.html
_sources/: index.rst.txt
_static/: default.css  documentation_options.js
api/: envisage.api.html  envisage.application.html  envisage.application_event.html  envisage.composite_plugin_manager.html  envisage.core_plugin.html  envisage.egg_basket_plugin_manager.html  envisage.egg_plugin_manager.html  envisage.egg_utils.html  envisage.examples.html  envisage.examples.tests.html  envisage.examples.tests.test__demo.html  envisage.examples.tests.test_etsdemo_info.html  envisage.extension_point.html  envisage.extension_point_binding.html  envisage.extension_point_changed_event.html  envisage.extension_provider.html  envisage.extension_registry.html  envisage.html  envisage.i_application.html  envisage.i_extension_point.html  envisage.i_extension_point_user.html  envisage.i_extension_provider.html  envisage.i_extension_registry.html  envisage.i_import_manager.html  envisage.i_plugin.html  envisage.i_plugin_activator.html  envisage.i_plugin_manager.html  envisage.i_provider_extension_registry.html  envisage.i_service_registry.html  envisage.i_service_user.html  envisage.ids.html  envisage.import_manager.html  envisage.package_plugin_manager.html  envisage.plugin.html  envisage.plugin_activator.html  envisage.plugin_event.html  envisage.plugin_extension_registry.html  envisage.plugin_manager.html  envisage.plugins.debug.html  envisage.plugins.event_manager.api.html  (+105 more)
doc/: Example - Message of the Day.txt  Using Services.txt
docs/: ConvenienceTraitTypes.txt  Core.txt  Example - Message of the Day.txt  ExtensionPoints.txt  Glossary.txt  Introduction to Envisage.txt  Introduction.txt  Makefile  MessageOfTheDay (using eggs).txt  MessageOfTheDay.txt  Plugins.txt  Services.txt  Using Extension Points.txt  Using Plugins.txt  Using Services.txt  Workbench.txt  conf.py  core.rst  goodger.css  graft_docs.py  index.rst  index.txt  introduction.rst  make_doc.py  make_docs.py  message_of_the_day.rst  plugins.rst  requirements.txt  rest.css  services.rst  update_gh_pages.py  voidspace.css
envisage/: __init__.py  _compat.py  _entry_point.py  api.py  application.py  application_event.py  canopy_plugin_manager.py  category.py  class_load_hook.py  composite_plugin_manager.py  core_plugin.py  egg_basket_plugin_manager.py  egg_plugin_manager.py  egg_utils.py  entry_point_plugin_manager.py  extension_point.py  extension_point_binding.py  extension_point_changed_event.py  extension_provider.py  extension_registry.py  hanger.py  i_application.py  i_extension_point.py  i_extension_point_user.py  i_extension_provider.py  i_extension_registry.py  i_import_manager.py  i_plugin.py  i_plugin_activator.py  i_plugin_manager.py  i_provider_extension_registry.py  i_service_registry.py  i_service_user.py  ids.py  import_manager.py  package_plugin_manager.py  plugin.py  plugin_activator.py  plugin_event.py  plugin_extension_registry.py  (+9 more)
envisage_core_documentation/: core.html  extension_points.html  front.html  glossary.html  gui_application.html  howto_create_a_plugin.html  index.html  introduction.html  message_of_the_day.html  message_of_the_day_(using_eggs).html  plugins.html  preferences.html  services.html  workbench.html
examples/: README.rst  hello_world.py
tasks_user_manual/: extensibility.html  front.html  index.html  intro.html  layout.html  menus.html
(+2223 files in other folders)
